kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vakyamanch-service
spec:
  type: LoadBalancer  # GKE will provision a public IP
  selector:
    app: vakyamanch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
